{
    "name": "MainInput",
    "maps": [
        {
            "name": "Player",
            "id": "5eed664b-1e15-45b2-bbb8-77f7171fff6f",
            "actions": [
                {
                    "name": "MoveTowards",
                    "type": "Button",
                    "id": "cfcdabfa-b95d-4e19-9f96-936ed2321714",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Target",
                    "type": "Button",
                    "id": "3775ef3f-1ceb-4081-abf8-79fded4921bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltTarget",
                    "type": "Button",
                    "id": "4cecccac-221a-42f2-a507-3d91af2ed820",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldMoveCamera",
                    "type": "Value",
                    "id": "0f38bcdb-43bc-4f5e-bba4-ff6d9e60ae7f",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AbilityOne",
                    "type": "Button",
                    "id": "4946f6af-a99a-40e4-9032-4319660c81cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityTwo",
                    "type": "Button",
                    "id": "350bdee7-f635-4e8a-87e3-d30d6854de77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityThree",
                    "type": "Button",
                    "id": "9e04ccf5-180f-4eaf-aa9c-63d36ebc9413",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityFour",
                    "type": "Button",
                    "id": "2a35be02-c391-467f-864d-fee1e46de1b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityFive",
                    "type": "Button",
                    "id": "a3e7e195-a0e8-4c0e-a798-daeb41ec97ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityUltimate",
                    "type": "Button",
                    "id": "2344ff24-125b-479d-aeb0-81f87e089e44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0f57df4b-feec-4dc2-b368-afe27a311987",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveTowards",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef6890a0-4b8c-4540-9a6d-214bc968708c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54275d51-e7b4-44b9-94f7-9e11a699abf2",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0142aeb3-ae6b-4377-af2b-f536f20e67f0",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldMoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffa37e60-b62f-45ea-9cea-57d3ed1233c0",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityFive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a001b4bc-28a1-41be-91e9-c8a7d7a4f058",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityFour",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13e26b58-5c61-4625-93d7-1822cd9fda1b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cc4cb0f-36c3-40ee-a86e-6d1e570d481d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "874dd2e1-853f-4564-8284-e05b01d98453",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0119496e-fb24-4c92-b2b5-e6cbfad45bb3",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityUltimate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "91a6843d-bac5-4078-84c1-721c60ba1c85",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}